--- a/ASP .NET CORE MVC USING ADO.NET/ASP .NET CORE MVC USING ADO.NET.csproj
+++ b/ASP .NET CORE MVC USING ADO.NET/ASP .NET CORE MVC USING ADO.NET.csproj
@@ -7,4 +7,9 @@
     <RootNamespace>ASP_.NET_CORE_MVC_USING_ADO.NET</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+  </ItemGroup>
+
 </Project>
